--- a/frontend/src/components/tokenBooking.css
+++ b/frontend/src/components/tokenBooking.css
@@ -3,15 +3,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(120deg, #d6bfed, #d6e2f4);
   font-family: Arial, sans-serif;
+  position: relative;
+}
+.token-booking-container::before{
+  content: "";
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  z-index: -1;
+  background: url("../images/image.png") no-repeat center center fixed;
+  background-size: cover;
+  background-position: center; 
 }
 
-.token-booking-box {
-  background: #fff;
+.token-booking-box{
+  background-color: #fff;
   padding: 35px 40px;
   border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15); */
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
   width: 400px;
 }
 
@@ -99,6 +113,11 @@
     background-color: #dc3545;
     color: white;
     cursor: not-allowed;
+}
+
+.slot-btn.selected {
+  border: 2px solid #000;
+  box-shadow: 0 0 5px #333;
 }
 
 
